test/errhandling/lydia/notAnErrorSubtype-rethrown2.good
notAnErrorSubtype-rethrown2.chpl:5: In function 'main':
notAnErrorSubtype-rethrown2.chpl:7: error: Cannot throw an instance of type 'borrowed Foo', not a subtype of Error
